[package]
name = "ocafile-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["cargo"] }
oca-ast-semantics = "0.5.5"
oca-bundle-semantics = { version = "0.5.5", features = ["format_overlay"] }
oca-file = "0.5.5"
oca-file-semantics = "0.5.5"
said = "0.4.1"
serde = "1.0.214"
serde_json = "1.0.132"
thiserror = "1.0.66"
transformation-file = "0.5.5"
